--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.5.4",
+    "react-icons": "^5.5.0",
     "swiper": "^12.1.0"
   },
   "devDependencies": {
